<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/home_content_bg"
    android:paddingTop="@dimen/home_desc_vertical_padding">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/contentWhiteBoxRoundedCornerStyle"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/about_logo"
            android:layout_width="@dimen/icon_width"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/about_page_icon"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/home_alphed_bg"/>


        <com.mttnow.coolestprojects.screens.fragments.ui.CustomTextView
            android:id="@+id/about_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/about_label"
            android:textStyle="bold"
            android:textColor="@color/home_content_text_color"
            android:textSize="@dimen/container_title_size"
            custom:font="OpenSans-Bold.ttf"/>

        <com.mttnow.coolestprojects.screens.fragments.ui.CustomTextView
            android:id="@+id/about_desc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/about_desc"
            android:textColor="@color/home_content_text_color"
            android:textSize="@dimen/container_content_size"

            custom:font="OpenSans-Regular.ttf"
            android:layout_below="@+id/about_logo"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/about_photo_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/about_photo1"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_below="@+id/about_desc1"/>

        <com.mttnow.coolestprojects.screens.fragments.ui.CustomTextView
            android:id="@+id/about_desc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/about_desc2"
            android:textColor="@color/home_content_text_color"
            android:textSize="@dimen/container_content_size"

            custom:font="OpenSans-Regular.ttf"
            android:layout_below="@+id/about_photo_1"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/about_photo_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/about_photo2"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_below="@+id/about_desc2"/>
    </RelativeLayout>
</LinearLayout>
