<?xml version="1.0" encoding="utf-8"?>

<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/sponsor_logo_padding">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        >
        <!--tools:showIn="@layout/home_sponsors_layout"-->
        <com.mttnow.coolestprojects.screens.fragments.ui.CustomTextView
            android:id="@+id/diamond_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diamond_desc"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="@dimen/sponsor_logo_padding"
            custom:font="OpenSans-Bold.ttf"
            android:gravity="center_horizontal|center_vertical" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">
            <TableRow >

                <ImageView
                    android:id="@+id/intel_logo"
                    style="@style/sponsorLogoStyle"

                    custom:layout_widthPercent="40%"
                    android:src="@drawable/sponsors_intel_logo" />

                <ImageView
                    android:id="@+id/microsoft_logo"
                    style="@style/sponsorLogoStyle"
                    custom:layout_widthPercent="40%"
                    android:src="@drawable/sponsors_microsoft_logo" />

            </TableRow>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <com.mttnow.coolestprojects.screens.fragments.ui.CustomTextView
            android:id="@+id/platinum_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sponsor_logo_padding"
            android:text="@string/platinum_desc"
            android:textColor="@color/colorAccent"
            custom:font="OpenSans-Bold.ttf"
            android:gravity="center_horizontal|center_vertical"/>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">
            <TableRow >

            <!--android:layout_gravity="center_horizontal"-->
                <ImageView
                    android:id="@+id/openet_logo"
                    style="@style/sponsorLogoStyle"
                    custom:layout_widthPercent="30%"
                    android:src="@drawable/sponsors_openet_logo" />

                <ImageView
                    android:id="@+id/rte_logo"
                    style="@style/sponsorLogoStyle"
                    custom:layout_widthPercent="20%"
                    android:src="@drawable/sponsors_rte_logo" />

                <ImageView
                    android:id="@+id/mastercard_logo"
                    style="@style/sponsorLogoStyle"
                    custom:layout_widthPercent="20%"
                    android:src="@drawable/sponsors_mastercard_logo" />

                <ImageView
                    android:id="@+id/boi_logo"
                    style="@style/sponsorLogoStyle"
                    custom:layout_widthPercent="30%"
                    android:src="@drawable/sponsors_boi_logo" />

            </TableRow>
            <TableRow>

                <ImageView
                    android:id="@+id/symantec_logo"
                    style="@style/sponsorLogoStyle"
                    custom:layout_widthPercent="30%"
                    android:src="@drawable/sponsors_symantec_logo" />

                <ImageView
                    android:id="@+id/riot_logo"
                    style="@style/sponsorLogoStyle"
                    custom:layout_widthPercent="20%"
                    android:src="@drawable/riot_games_logo" />

                <ImageView
                    android:id="@+id/tdl_logo"
                    style="@style/sponsorLogoStyle"
                    custom:layout_widthPercent="30%"
                    android:src="@drawable/sponsors_travelport_digital" />

                <ImageView
                    android:id="@+id/folens_logo"
                    style="@style/sponsorLogoStyle"
                    custom:layout_widthPercent="30%"
                    android:src="@drawable/sponsors_folens_logo" />
            </TableRow>
        </TableLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">
        <com.mttnow.coolestprojects.screens.fragments.ui.CustomTextView
            android:id="@+id/gold_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gold_desc"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/colorAccent"
            custom:font="OpenSans-Bold.ttf" />
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:stretchColumns="*">
            <TableRow android:layout_gravity="center_horizontal">
                <ImageView
                    android:id="@+id/virgin_media_logo"
                    style="@style/sponsorLogoStyle"
                    android:src="@drawable/sponsors_virgin_media_logo" />

                <ImageView
                    android:id="@+id/dublin_city_council_logo"
                    style="@style/sponsorLogoStyle"
                    android:src="@drawable/dublin_city_council_sponsor" />

                <ImageView
                    android:id="@+id/accenture_logo"
                    style="@style/sponsorLogoStyle"
                    android:src="@drawable/sponsors_accenture_logo" />

                <ImageView
                    android:id="@+id/liberty_it_logo"
                    style="@style/sponsorLogoStyle"
                    android:src="@drawable/sponsors_liberty_it_logo" />

            </TableRow>
            <TableRow>

                <ImageView
                    android:id="@+id/workday_logo"
                    style="@style/sponsorLogoStyle"
                    android:src="@drawable/sponsors_workday_logo" />

                <ImageView
                    android:id="@+id/zalando_logo"
                    style="@style/sponsorLogoStyle"
                    android:src="@drawable/sponsors_zalando_logo" />

                <ImageView
                    android:id="@+id/computer_futures_logo"
                    style="@style/sponsorLogoStyle"
                    custom:layout_widthPercent="30%"
                    android:src="@drawable/sponsors_computer_futures_logo" />

                <ImageView
                    android:id="@+id/hmh_logo"
                    style="@style/sponsorLogoStyle"
                    android:src="@drawable/sponsors_hmh_logo" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>